@@ -1686,7 +1686,18 @@ void grab_remote_db (GtkWidget *w, gpointer data)
 	if (strlen(errbuf)) errbox(errbuf);
 	else errbox(_("Error unzipping compressed data"));
     } else {
-	infobox(_("database installed"));
+	/* installed OK: give option of opening database now */
+        int resp = yes_no_dialog ("gretl",                      
+                                  _("Database installed.\n"
+                                    "Open it now?"), 0);
+
+        if (resp == GRETL_YES) { 
+	    char dbpath[MAXLEN];
+	    
+	    strcpy(dbpath, ggzname);
+	    strcpy(strrchr(dbpath, '.'), ".bin");
+	    open_named_db_list(dbpath);
+        }
 	populate_filelist(win);
     }
 
